--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
     <section class="page-header">
       <h1 class="project-name">Instant-lyrics</h1>
       <h2 class="project-tagline">look up lyrics for the currently playing song</h2>
-      <a href="https://github.com/tomtclai/Instant-Lyrics" class="btn">View on GitHub</a>
-      <a href="https://github.com/tomtclai/Instant-Lyrics/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/tomtclai/Instant-Lyrics/tarball/master" class="btn">Download .tar.gz</a>
+      <a href="mailto://tom.instantlyrics@gmail.com" class="btn">Contact Support</a>
+      <a href="https://github.com/tomtclai/Instant-Lyrics" class="btn">Download on App Store</a>
+      <a href="https://github.com/tomtclai/Instant-Lyrics" class="btn">View On GitHub</a>
     </section>
 
     <section class="main-content">
       <p>Have lyrics you want on your screen in the blink of an eye. </p>
 
-<ul>
-<li>Triggers google search based on what is currently playing</li>
-<li>Works with stock music app</li>
-<li>Quickly open in safari</li>
-</ul>
+    <ul>
+      <li>Triggers google search based on what is currently playing</li>
+      <li>Works with stock music app</li>
+      <li>Quickly open in safari</li>
+    </ul>
 
 <p>Open up music app, play a song, and let Instant Lyrics find lyrics for you!</p>
 
@@ -37,7 +37,6 @@
 
     </section>
 
-  
+
   </body>
 </html>
-
