--- a/index.html
+++ b/index.html
@@ -11,23 +11,36 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Instant-lyrics</h1>
-      <h2 class="project-tagline">look up lyrics for the currently playing song</h2>
+      <h1 class="project-name">Instant Lyrics</h1>
+      <h2 class="project-tagline">Lyrics in the blink of an eye</h2>
       <a href="mailto://tom.instantlyrics@gmail.com" class="btn">Contact Support</a>
-      <a href="https://github.com/tomtclai/Instant-Lyrics" class="btn">Download on App Store</a>
+      <p class="btn">Download on App Store</p>
       <a href="https://github.com/tomtclai/Instant-Lyrics" class="btn">View On GitHub</a>
     </section>
 
     <section class="main-content">
-      <p>Have lyrics you want on your screen in the blink of an eye. </p>
-
+      <p> Do you want to see the lyrics for the song you're listening to, but typing the song title and artist on a search engine is just too much for you? Well, now you don't have to.
+      </p>
+      <p>Utilizing ID3 tags that is on your audio files, Instant Lyrics knows what you're listening to. Instant Lyrics brings you the lyrics for any and every song that you are currently playing with the stock Music app. </p>
+    <h1>TL;DR</h1>
     <ul>
-      <li>Triggers google search based on what is currently playing</li>
-      <li>Works with stock music app</li>
-      <li>Quickly open in safari</li>
+      <li>Look up lyrics automatically based on ID3 tags</li>
+      <li>No more typing</li>
+      <li>Works with ios music app</li>
+      <li>Can also quickly open in safari</li>
+      <li>Free of charge, forever </li>
     </ul>
 
-<p>Open up music app, play a song, and let Instant Lyrics find lyrics for you!</p>
+
+
+    <center>
+
+    <img src="images/IMG_5359.png" width="30%">
+
+    <img src="images/IMG_5360.png" width="30%">
+
+    <img src="images/IMG_5361.png" width="30%">
+    </center>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/tomtclai/Instant-Lyrics">Instant-lyrics</a> is maintained by <a href="https://github.com/tomtclai">tomtclai</a>.</span>
