--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
 
     <center>
 
-    <img src="images/IMG_5359.png" width="30%">
+    <img src="images/IMG_5359.PNG" width="30%">
 
-    <img src="images/IMG_5360.png" width="30%">
+    <img src="images/IMG_5360.PNG" width="30%">
 
-    <img src="images/IMG_5361.png" width="30%">
+    <img src="images/IMG_5361.PNG" width="30%">
     </center>
 
       <footer class="site-footer">
