--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <ul>
       <li>Look up lyrics automatically based on ID3 tags</li>
       <li>No more typing</li>
-      <li>Works with ios music app</li>
-      <li>Can also quickly open in safari</li>
+      <li>Works with iOS Music app</li>
+      <li>Can also quickly open in Safari</li>
       <li>Free of charge, forever </li>
     </ul>
 
