--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section class="main-content">
       <p> Do you want to see the lyrics for the song you're listening to, but typing the song title and artist on a search engine is just too much for you? Well, now you don't have to.
       </p>
-      <p>Utilizing ID3 tags that is on your audio files, Instant Lyrics knows what you're listening to. Instant Lyrics brings you the lyrics for any and every song that you are currently playing with the stock Music app. </p>
+      <p>Utilizing ID3 tags on your audio files, Instant Lyrics knows what you're listening to. Instant Lyrics brings you the lyrics for any and every song that you are currently playing with the stock Music app. </p>
     <h1>TL;DR</h1>
     <ul>
       <li>Look up lyrics automatically based on ID3 tags</li>
