--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <li>Look up lyrics automatically based on ID3 tags</li>
       <li>No more typing</li>
       <li>Works with iOS Music app</li>
+      <li>Does not work with audio streams</li>
       <li>Can also quickly open in Safari</li>
       <li>Free of charge, forever </li>
     </ul>
