--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1 class="project-name">Instant Lyrics</h1>
       <h2 class="project-tagline">Lyrics in the blink of an eye</h2>
       <a href="mailto:tom.instantlyrics@gmail.com" class="btn">Contact Support</a>
-      <p class="btn">Download on App Store</p>
+      <p class="btn" style:"text-decoration: line-through;">Download on App Store</p>
       <a href="https://github.com/tomtclai/Instant-Lyrics" class="btn">View On GitHub</a>
     </section>
 
@@ -55,7 +55,12 @@
       </footer>
 
     </section>
-
+    <h1>
+      Why is this not on the App store?
+    </h1>
+    <p>
+      Apple rejected this app because lyrics are usually copyrighted. At this point in time, there is nothing I could do about it.
+    </p>
 
   </body>
 </html>
