--- a/index.html
+++ b/index.html
@@ -46,6 +46,16 @@
       <figcaption>3. Enjoy</figcaption>
     </figure>
     </section>
+    <h1>Install</h1>
+    <p>
+      <ul>
+        <li>Build and run by opening the .xcodeproj file
+        </li>
+        <li>
+          You don't have to have a developer account to load apps to your device (<a href="http://bouk.co/blog/sideload-iphone/">More info</a>)
+        </li>
+      </ul>
+    </p>
    <h1>
       Why is this not on the App store?
     </h1>
