--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       <figcaption>3. Enjoy</figcaption>
     </figure>
     </section>
+    <br style="clear: left;">
    <h1>
       Why is this not on the App store?
     </h1>
