--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       Why is this not on the App store?
     </h1>
     <p>
-      Apple rejected this app because lyrics are usually copyrighted. At this point in time, there is nothing I could do about it.
+      Apple rejected this app because lyrics are usually copyrighted. I was asked to provide rights to display lyrics in the App. At this point in time, there is nothing I could do about that.
     </p>
 
         
