--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       Why is this not on the App store?
     </h1>
     <p>
-      Apple rejected this app because lyrics are usually copyrighted. I was asked to prove that I have rights to display all lyrics that could show up from a search query, something that I don't have the resource for. At this point in time, there is nothing I could do.
+      Apple rejected this app because lyrics are usually copyrighted. I was asked to prove that I have rights to display any lyrics that could show up from a search query, something that I don't have the resource for. At this point in time, there is nothing I could do.
     </p>
 
         
