--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1 class="project-name">Instant Lyrics</h1>
       <h2 class="project-tagline">Lyrics in the blink of an eye</h2>
       <a href="mailto:tom.instantlyrics@gmail.com" class="btn">Contact Support</a>
-      <p class="btn" style:"text-decoration: line-through !important;">Download on App Store</p>
+      <p class="btn" style:"text-decoration: line-through !important;">Not on App Store</p>
       <a href="https://github.com/tomtclai/Instant-Lyrics" class="btn">View On GitHub</a>
     </section>
 
