--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       Why is this not on the App store?
     </h1>
     <p>
-      Apple rejected this app because lyrics are usually copyrighted. I was asked to prove that I have rights to display any lyrics that could ever show up from a search query (turns out displaying the websites alone required rights). At this point in time, there is nothing I could do about it.
+      Apple rejected this app because lyrics are usually copyrighted. I was asked to prove that I have rights to display any lyrics that could ever show up from a search query (turns out displaying those websites alone required rights). At this point in time, there is nothing I could do about it.
     </p>
 
         
