--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       Why is this not on the App store?
     </h1>
     <p>
-      Apple rejected this app because lyrics are usually copyrighted. I was asked to prove that I have rights to display any lyrics that could ever show up from a search query (turns out displaying those websites alone required rights). Unfortunately, there is nothing we could do about it at the moment.
+      Apple rejected this app because lyrics are usually copyrighted. I was asked to prove that I have rights to display any lyrics that could ever show up from a search query (turns out displaying those websites alone required rights). However, with a copy of Xcode 7, you can download the project and install it on your phone for free.
     </p>
 
         
