--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       Why is this not on the App store?
     </h1>
     <p>
-      Apple rejected this app because lyrics are usually copyrighted. I was asked to prove that I have rights to display any lyrics that could ever show up from a search query (turns out displaying those websites alone required rights). There was nothing we could do. However, with a copy of Xcode 7, you can download this project and manually push it to your phone.
+      Apple rejected this app because lyrics are usually copyrighted. I was asked to prove that I have rights to display any lyrics that could ever show up from a search query (turns out displaying those websites alone required rights). There was nothing we could do. However, as of June 11, 2015, <a href="http://www.zdnet.com/article/with-xcode-7-you-can-freely-bypass-the-app-store-for-ios-apps/">you can now download this project and manually push it to your phone.</a>
     </p>
 
         
